--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <meta name="robots" content="index, follow">
    <title>Paul Lapkin</title>
    <!-- web favicon -->
-   <link rel="shortcut icon" href="link/images/vandors-img/logo.png" type="image/x-icon">
+   <link rel="shortcut icon" href="link/images/vandors-img/favicon.png" type="image/x-icon">
    <!-- google fonts here -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
          <div class="container">
             <div class="logo">
                <a href="#">
-                  <img src="../link/images/vandors-img/logo.png" alt="logo">
+                  <img src="link/images/vandors-img/logo.png" alt="logo">
                </a>
             </div>
             <div class="menu">
@@ -90,7 +90,7 @@
          <div class="container">
            <div class="about-grid">
                <div class="about-grid-item">
-                  <img src="../link/images/paul-man.jpg" alt="paul-lapkin">
+                  <img src="link/images/paul-man.jpg" alt="paul-lapkin">
                </div>
                <div class="about-grid-item">
                   <h4>Hi, i'm Paul Lapkin, Experience crafter from Canada.</h4>
@@ -120,19 +120,19 @@
             </div>
             <div class="process-grid" data-uk-scrollspy="cls: uk-animation-slide-right; repeat: true; duration: 700; delay: 150;">
                <div class="process-grid-item">
-                  <img src="../link/images/vandors-img/process-img1.png" alt="img1">
+                  <img src="link/images/vandors-img/process-img1.png" alt="img1">
                   <h4>design</h4>
                </div>
                <div class="process-grid-item">
-                  <img src="../link/images/vandors-img/process-img2.png" alt="img2">
+                  <img src="link/images/vandors-img/process-img2.png" alt="img2">
                   <h4>Development</h4>
                </div>
                <div class="process-grid-item">
-                  <img src="../link/images/vandors-img/process-img3.png" alt="img3">
+                  <img src="link/images/vandors-img/process-img3.png" alt="img3">
                   <h4>testing</h4>
                </div>
                <div class="process-grid-item">
-                  <img src="../link/images/vandors-img/process-img4.png" alt="img4">
+                  <img src="link/images/vandors-img/process-img4.png" alt="img4">
                   <h4>launch</h4>
                </div>
             </div>
@@ -204,38 +204,38 @@
          <div class="container">
             <div class="lts-wk-grid" data-uk-scrollspy="cls:uk-animation-slide-right; repeat: true; duration: 700; delay: 150;"  data-uk-lightbox="animation: scale">
                <div class="lts-wk-grid-item mix web">
-                  <a href="../link/images/vandors-img/lw1.jpg">
-                     <img src="../link/images/vandors-img/lw1.jpg" alt="lw1">
+                  <a href="link/images/vandors-img/lw1.jpg">
+                     <img src="link/images/vandors-img/lw1.jpg" alt="lw1">
                   </a>
                </div>
                <div class="lts-wk-grid-item mix wp">
-                  <a href="../link/images/vandors-img/lw2.jpg">
-                     <img src="../link/images/vandors-img/lw2.jpg" alt="lw2">
+                  <a href="link/images/vandors-img/lw2.jpg">
+                     <img src="link/images/vandors-img/lw2.jpg" alt="lw2">
                   </a>             
                </div>
                <div class="lts-wk-grid-item mix web">
-                  <a href="../link/images/vandors-img/lw3.jpg">
-                     <img src="../link/images/vandors-img/lw3.jpg" alt="lw3">
+                  <a href="link/images/vandors-img/lw3.jpg">
+                     <img src="link/images/vandors-img/lw3.jpg" alt="lw3">
                   </a>
                </div>
                <div class="lts-wk-grid-item mix wp">
-                  <a href="../link/images/vandors-img/lw4.jpg">
-                     <img src="../link/images/vandors-img/lw4.jpg" alt="lw4">
+                  <a href="link/images/vandors-img/lw4.jpg">
+                     <img src="link/images/vandors-img/lw4.jpg" alt="lw4">
                   </a>        
                </div>
                <div class="lts-wk-grid-item mix dev">
-                  <a href="../link/images/vandors-img/lw5.jpg">
-                     <img src="../link/images/vandors-img/lw5.jpg" alt="lw5">
+                  <a href="link/images/vandors-img/lw5.jpg">
+                     <img src="link/images/vandors-img/lw5.jpg" alt="lw5">
                   </a>
                </div>
                <div class="lts-wk-grid-item mix dev">
-                  <a href="../link/images/vandors-img/lw6.jpg">
-                     <img src="../link/images/vandors-img/lw6.jpg" alt="lw6">
+                  <a href="link/images/vandors-img/lw6.jpg">
+                     <img src="link/images/vandors-img/lw6.jpg" alt="lw6">
                   </a>
                </div>
                <div class="lts-wk-grid-item mix wp">
-                  <a href="../link/images/vandors-img/lw7.jpg">
-                     <img src="../link/images/vandors-img/lw7.jpg" alt="lw7">
+                  <a href="link/images/vandors-img/lw7.jpg">
+                     <img src="link/images/vandors-img/lw7.jpg" alt="lw7">
                   </a>
                </div>
             </div>
@@ -252,9 +252,9 @@
          <div class="container">
             <div class="grid-testo-container">
                <div class="grid-testo-items">
-                  <img class="quote" src="../link/images/vandors-img/quote.png" alt="quote">
+                  <img class="quote" src="link/images/vandors-img/quote.png" alt="quote">
                   <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquipex ea commodo consequat.</p>
-                  <img class="signature" src="../link/images/vandors-img/signature.png" alt="signature">
+                  <img class="signature" src="link/images/vandors-img/signature.png" alt="signature">
                   <h4>Deniel Croft</h4>
                   <span>Creative Designer, Levy</span>
                </div>
@@ -357,7 +357,7 @@
    <!-- uikin  js -->
    <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.24/dist/js/uikit.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.24/dist/js/uikit-icons.min.js"></script>
-   <script src="../link/vandors-js/mixitup.min.js"></script> 
+   <script src="link/vandors-js/mixitup.min.js"></script> 
    <!-- main js -->
    <script src="link/js/index.js"></script>
 </body>
